--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
   font-size: 18px;
-  padding: 2.5em;
+  padding: 1.25em;
   gap: 2.5em;
   line-height: 1.25em;
   display: -webkit-box;
@@ -133,12 +133,11 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   gap: 1.25em;
 }
-.main-info__image-container {
+.main-info__image {
   padding: 0.625em;
   border: 1px solid #0051ca;
 }
 .main-info__text {
-  padding-top: 2.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
